<resources>
    <!--Public name-->
    <string name="app_name">WeiboClient</string>

    <!--Named by WW-->
    <string name="btn_login">微博授权登录</string>
    <string name="text_home">首页</string>
    <string name="text_message">消息</string>
    <string name="text_square">发现</string>
    <string name="text_user">我</string>
    <string name="hint_search">大家正在搜：微博主题</string>
    <string name="text_follow">全部关注</string>

    <!--Named by ZML-->
    <string name="toast_account_error">您输入的账户格式错误,请重新输入!</string>
    <string name="toast_login_auth_canceled">您已放弃进行微博登录,页面已返回!</string>
    <string name="toast_auth_success">微博授权登录成功!页面正在跳转……</string>
    <string name="toast_auth_failed">微博授权登录失败,请重新登录.</string>
    <string name="toast_function_unfinished">功能尚未开发完成,攻城狮正在努力奋斗中……</string>
    <string name="toast_post_weibo_successed">您已成功发布一条微博!</string>
    <string name="toast_post_weibo_canceled">取消并返回主页面</string>
    <string name="toast_operation_failed">对不起,操作失败,请重试!</string>
    <string name="hint_post_weibo_tip">您说您这不说点什么东东,是不是对不起您点击这个功能呐?</string>
    <string name="tv_post_weibo_title">发布微博</string>

    <string name="btn_post_weibo_send">发表</string>
    <string name="btn_message_messagebox">系统通知</string>
    <string name="btn_message_comments">评论信息</string>
    <string name="btn_message_good">赞</string>
    <string name="btn_message_mention">\@我的</string>

</resources>
