<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"
        android:background="@color/bottom_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/RadioButtonBottomTab"
            android:checked="true"
            android:drawableTop="@drawable/icon_home"
            android:text="@string/text_home" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_message"
            android:text="@string/text_message" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@drawable/correct_oran_sel"
            android:padding="8dp"
            android:src="@drawable/icon_add" />

        <RadioButton
            android:id="@+id/rb_search"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_square"
            android:text="@string/text_square" />

        <RadioButton
            android:id="@+id/rb_user"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_userinfo"
            android:text="@string/text_user" />
    </RadioGroup>
</LinearLayout>
